--- a/ArithmeticQuiz/arithmetic quiz_questions.html
+++ b/ArithmeticQuiz/arithmetic quiz_questions.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--http://dl.dropbox.com/u/88468608/Untitled%20Folder/ -->
-<link type="text/css" href="http://dl.dropbox.com/u/88468608/Untitled%20Folder/quiz_question.css" rel="stylesheet" />
+<link type="text/css" href="quiz_question.css" rel="stylesheet" />
 
 </head>
 <body onload="clock()" id="bodypart">
@@ -37,6 +36,6 @@
    
 
 </form>
-<script src="http://dl.dropbox.com/u/88468608/Untitled%20Folder/arithmetic%20quiz.js" ></script>
+<script src="arithmetic_quiz.js" ></script>
 </body>
 </html>
