--- a/ArithmeticQuiz/arithmetic quiz.html
+++ b/ArithmeticQuiz/arithmetic quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://dl.dropbox.com/u/88468608/Untitled%20Folder/arithmetic%20quiz.js" ></script>
+<script src="arithmetic_quiz.js" ></script>
 </head>
 <body>
 <ul><li>There is a countdown timer on every page.</li><li> The page will stop taking input as soon as the timer reaches zero.</li><li>If the question will be timed out, it will be neither marked as right nor wrong.</li><li>User is not allowed to go back and edit answers.</li>
