--- a/ArithmeticQuiz/arithmetic_quiz_questions.html
+++ b/ArithmeticQuiz/arithmetic_quiz_questions.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link type="text/css" href="quiz_question.css" rel="stylesheet" />
 
 </head>
@@ -22,7 +25,7 @@
 	<label id ="label1" style="font-weight:bold; size:20px;"> </label>
 	<div id="opt" >
 		<label id="ques_lbl" class= "question_display">Question </label>
-                <label id="ques_num_lbl" class= "question_display"></label>
+                <label id="ques_num_lbl" class= "question_display">fkldsjfkds</label>
 		<label id="1" class= "question_display"></label>
 		<br/>
 		<input id="answer" type="text" name = "hello" />
